--- a/bin/LMS.dll.config
+++ b/bin/LMS.dll.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="con" connectionString="Data Source=LAPTOP-L5841FAC\SQLEXPRESS;Initial Catalog=librarydb;Integrated Security=true" />
-	</connectionStrings>
+  <add name="con" connectionString="Data Source=LAPTOP-L5841FAC\SQLEXPRESS;Initial Catalog=librarydb;Integrated Security=true" />
+  <add name="librarydbConnectionString" connectionString="Data Source=LAPTOP-L5841FAC\SQLEXPRESS;Initial Catalog=librarydb;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
